--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <p style="font-size: 3vh;color: #FFFFFF"></p>
             <p style="line-height: 3">
                 <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="#">首页~</a>
-                <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="https://seat.winterco.org/auth/login">SeAT</a>
-                <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="https://forums.winterco.org/">WC论坛</a>
-                <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="#">Alipay历史</a>
+                <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="https://seat.winterco.org/auth/login">SeAT~</a>
+                <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="https://forums.winterco.org/">WC论坛~</a>
+                <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="#">Alipay历史~</a>
             </p>
             <p>
                 <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
