--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <p>
                 <img src="file/index/images/H6dab62e0541a46969864585570bca3a6Q.jpg" style="border-radius: 50%;max-width: 100px;max-height: 100px;">
             </p>
-            <h1 style="color: #FFFFFF"><strong>Alipay</strong></h1>
+            <h1 style="color: #ff0000"><strong>Alipay</strong></h1>
             <p style="font-size: 3vh;color: #FFFFFF"></p>
             <p style="line-height: 3">
                 <a style="border-radius: 10px;padding: 7px 30px;color: #FFFFFF;border-style: solid;text-decoration: none;" href="#">首页~</a>
