--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@ permalink: /404.html
 	</div>
 
 		<div class="box bg-1">
-				<button class="button button--antiman button--round-l button--text-medium" onclick="window.open('https://www.aishoujizy.com/')"><span>返回首页</span></button>
+				<button class="button button--antiman button--round-l button--text-medium" onclick="window.open('https://alipay.github.io')"><span>返回首页</span></button>
 	</div>
 	</div>
 	<div class="body_buttom">
